--- a/project.config.json
+++ b/project.config.json
@@ -44,7 +44,7 @@
     "compileType": "miniprogram",
     "libVersion": "2.20.0",
     "appid": "wxbc8540873682e621",
-    "projectname": "MeiTuan",
+    "projectname": "FengNiao",
     "debugOptions": {
         "hidedInDevtools": []
     },
